--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
+project(asd)
 
 
-project(Numifier VERSION 1.0)
+set(CMAKE_EXPORT_COMPILE_COMMANDS on)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-
-add_library(Numifier Numifier.cpp)
+add_subdirectory(numifier)
+add_subdirectory(demo)
+add_subdirectory(tests)
